infrastructure/configs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mdch-lab-gateway
  namespace: cilium
spec:
  gatewayClassName: cilium
  addresses:
    - type:  IPAddress
      value: 192.168.1.29
  listeners:
  - name: wildcard
    hostname: "*.mdch-lab.dev"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All      
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-mdch-lab-dev-cert
