infrastructure/configs/clusternetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: observe-all-l7-traffic
spec:
  endpointSelector: {}
